--- a/reset.css
+++ b/reset.css
@@ -15,8 +15,22 @@ ul {
 
 /* sizes */
 
-.container {
+.desktop-header {
+    max-width: 1440px;
+    width: 100%;
+    margin: auto;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.desktop {
     max-width: 1192px;
+    width: 100%;
+    margin: auto;
+}
+
+.tablet {
+    max-width: 704px;
     width: 100%;
     margin: auto;
 }
