--- a/about.css
+++ b/about.css
@@ -545,6 +545,7 @@ a {
 
     .plate {
         flex-direction: column;
+        align-items: flex-start;
         gap: 40px;
         padding-top: 80px;
         padding-bottom: 80px;
